--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 
   <!-- Look at icons at http://fontawesome.io/icons/ -->
   <ul class="fa-ul">
-  <li><i class="fa fa-li fa-book"></i><a href="/engineering/paths/">About</a>—an introduction to what we're doing.</li>
-  <li><i class="fa fa-li fa-ravelry"></i><a href="/engineering/about/">Why Build-A-Cell?</a>—why this project exists.</li>
+  <li><i class="fa fa-li fa-book"></i><a href="/engineering/about/">About</a>—an introduction to what we're doing.</li>
+  <li><i class="fa fa-li fa-ravelry"></i><a href="/engineering/build-a-cell/">Why Build-A-Cell?</a>—why this project exists.</li>
   <li>
   	<i class="fa fa-li fa-cogs"></i><a href="/engineering{% post_url 2016-10-28-introduction %}">Development Kit</a>—an overview of what we've built
 	<ul class="fa-ul">
