--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: default
   <li>
   	<i class="fa fa-li fa-cogs"></i><a href="/engineering{% post_url 2016-10-28-introduction %}">Development Kit</a>—an overview of what we've built
 	<ul class="fa-ul">
-	  	<li><i class="fa fa-li fa-share-alt"></i><a href="/engineering{% post_url 2016-10-28-organism-breadboard %}">Organism Breadboard</a>—computational tool for constructing.</li>
-      <li><i class="fa fa-li fa-tasks"></i><a href="/engineering{% post_url 2016-10-28-crispri-system %}">CRISPRi—rapid knockdown of pathways and functions.</a></li>
+	  	<li><i class="fa fa-li fa-share-alt"></i><a href="/engineering{% post_url 2016-10-28-organism-breadboard %}">Organism Breadboard</a>—a computational toolset.</li>
+      <li><i class="fa fa-li fa-tasks"></i><a href="/engineering{% post_url 2016-10-28-crispri-system %}">CRISPRi</a>—tool for knockdown of pathways and functions.</a></li>
 	 	<li><i class="fa fa-li fa-sun-o"></i><a href="/engineering{% post_url 2016-10-28-containers %}">Container</a>—what we're using to house new genomes.</li>
     </ul></li>
   </ul>
