--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@ layout: default
       <li><i class="fa fa-li fa-tasks"></i><a href="/engineering{% post_url 2016-10-28-crispri-system %}">CRISPRi</a>—a tool for knockdown of pathways and functions.</a></li>
 	 	<li><i class="fa fa-li fa-sun-o"></i><a href="/engineering{% post_url 2016-10-28-containers %}">Container</a>—what we're using to house new genomes.</li>
     </ul></li>
+    <li><i class="fa fa-li fa-code"></i><a href="/engineering{% post_url 2016-10-28-open-source %}">Open Source</a>—free to share and use.</li>
+  <li>
   </ul>
 </div>
