--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
   <li><i class="fa fa-li fa-book"></i><a href="/engineering/about/">About</a>—an introduction to what we're doing.</li>
   <li><i class="fa fa-li fa-ravelry"></i><a href="/engineering/build-a-cell/">Why Build-A-Cell?</a>—why this project exists.</li>
   <li>
-  	<i class="fa fa-li fa-cogs"></i><a href="/engineering{% post_url 2016-10-28-introduction %}">Development Kit</a>—an overview of what we've built
+  	<i class="fa fa-li fa-cogs"></i><a href="/engineering{% post_url 2016-10-28-introduction %}">Development Kit</a>—an overview of what we've built.
 	<ul class="fa-ul">
 	  	<li><i class="fa fa-li fa-share-alt"></i><a href="/engineering{% post_url 2016-10-28-organism-breadboard %}">Organism Breadboard</a>—a computational toolset.</li>
       <li><i class="fa fa-li fa-tasks"></i><a href="/engineering{% post_url 2016-10-28-crispri-system %}">CRISPRi</a>—a tool for knockdown of pathways and functions.</a></li>
